# YNAB-currency-converter

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  TODOS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/hooks/: check-gstack.sh  session-start.sh
.github/workflows/: ci.yml
app/: auth.py  config.py  connections.py  convert.py  db.py  events.py  http.py  import_legacy.py  main.py  oauth.py  rates.py  set_admin.py  store.py  templates.py  users.py  ynab.py
app/routes/: admin.py  conversions.py  settings.py
app/static/: currency_guess.js  sortable.js  style.css
app/templates/: _macros.html  admin.html  applied.html  base.html  batch_form.html  conversion_form.html  detail.html  error.html  index.html  landing.html  login.html  new.html  preview.html  preview_all.html  privacy.html  settings.html  signup.html
deploy/: autodeploy.sh  docker-entrypoint.sh
tests/: conftest.py  currency_guess_cases.py  test_admin.py  test_app_flow.py  test_auth.py  test_category_approve.py  test_conversion_validation.py  test_convert.py  test_currency_guess.py  test_db.py  test_errors.py  test_import_legacy.py  test_oauth.py  test_preview_all.py  test_rate_override.py  test_rates.py  test_store.py  test_ynab_categories.py
