[project]
name = "ynab-currency-converter"
version = "0.2.0.1"
description = "A self-hosted multi-currency conversions page for YNAB."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "playwright>=1.45",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.uv]
# The app runs from the source tree (uvicorn app.main:app) rather than being
# installed as a distribution, so uv manages the environment without building
# the project itself.
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom: Depends()/Form() in parameter defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Form"]

[tool.mypy]
python_version = "3.12"
files = ["app"]
check_untyped_defs = true
warn_unused_ignores = true
